[package]
name = "fs-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte-unit = "4.0.9"
clap = { version = "3.1.3", features = ["derive"] }
chrono = "0.4.9"
csv = "1.1"
indicatif = "0.16.2"
log = "0.4.0"
plotters = "0.3"
rand = "0.8.0"
rayon = "1.5.1"
serde = { version = "1", features = ["derive"] }
timer = "0.2.0"